...
        let formattedDate = photo.createdAt.map { dateFormatter.string(from: $0) } ?? "Дата неизвестна"
        
        return (imageURL: imageURL, formattedDate: formattedDate, isLiked: photo.isLiked)
    }
    
    func willDisplayCell(at indexPath: IndexPath) {
        if indexPath.row == photos.count - 1 && ProcessInfo().environment["isUITesting"] == "NO" {
            ImagesListService.shared.fetchPhotosNextPage()
        }
    }
    
    func viewDidLoad() {
        ImagesListService.shared.fetchPhotosNextPage()
...
